<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sketch_drawing_headphones_cup_table_117210_360x640"
    android:gravity="center_horizontal"
    tools:context=".UI.LoginActivity"
    tools:layout_editor_absoluteY="25dp">

    <!-- Login progress -->

    <Button
        android:id="@+id/btnIniciarSesion"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/ingbtn"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnIniciarConGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLogin" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnIniciarConGoogle"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnIniciarSesion"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLogin">
        style="?android:textAppearanceSmall"
        android:text="Inicar Sesión con google"
        android:textStyle="bold"</com.google.android.gms.common.SignInButton>

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="225dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIniciarSesion">

        <AutoCompleteTextView
            android:id="@+id/txtEmail"
            android:layout_width="225dp"
            android:layout_height="45dp"
            android:background="@drawable/recttxts"
            android:ems="10"
            android:hint="Email"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="225dp"
            android:layout_height="45dp"
            android:background="@drawable/recttxts"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

    </LinearLayout>


    <ImageView
        android:id="@+id/imgLogoApp"
        android:layout_width="123dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="19dp"
        android:background="#00000000"
        app:layout_constraintBottom_toTopOf="@+id/txtIniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/modicalogo" />

    <TextView
        android:id="@+id/txtIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="17dp"

        android:text="Iniciar Sesión"
        android:textAppearance="@style/iniciar_ses"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutLogin"
        app:layout_constraintStart_toStartOf="@+id/imgLogoApp"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoApp"
        tools:text="Iniciar Sesión" />

    <TextView
        android:id="@+id/txtNocuenta"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"

        android:layout_marginEnd="8dp"
        android:text="@string/no_tienes_c"
        android:textAppearance="@style/no_tienes_c"
        app:layout_constraintEnd_toEndOf="@+id/btnIniciarConGoogle"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/btnIniciarSesion"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />

    <Button
        android:id="@+id/btnAbrirRegistrar"

        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/regbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNocuenta" />


</android.support.constraint.ConstraintLayout>