...
        app:layout_constraintBottom_toTopOf="@+id/imgUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgFondo" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewPlatos"
        android:layout_width="345dp"
        android:layout_height="187dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        android:fadeScrollbars="false"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFondo" />

    <Button
        android:id="@+id/btnBuscarRestaurantes"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/mapbtn"
        android:onClick="prueba"
...
